# ipc-shm

./: CMakeLists.txt  LICENSE  README.md
example/: client.cc  server.cc
src/fn/: fn.h  fn_invoker.cc  fn_invoker.h  fn_registry.cc  fn_registry.h
src/fn_registry/: fn.cc  fn.h  fn_registry.cc  fn_registry.h
src/shm_manager/: shm_manager.cc  shm_manager.h
